--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "Nguyen Pham"
   ],
   "dependencies": {
+    "@google/genai": "^1.22.0",
+    "@google/generative-ai": "^0.24.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.1",
